Add Slang shader support
- Add Slang shader compilation with combined SPIR-V output
- Add useCombinedSPIRV flag to toggle between Slang/GLSL shaders
- Slerp rotation improvements
- Fix depth-stencil image view aspect flags for proper Vulkan spec compliance

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ build/
 *.aab
 /captures
 
+#VSCODE
+.vscode
 # NDK / CMake
 .cxx/
 .externalNativeBuild/
@@ -32,3 +34,8 @@ Thumbs.db
 
 # Log files
 *.log
+
+# Keystore/release files
+app/release
+*.jks
+*.keystore
