Add Camera class with orientation support and refactor Android code
- Created Camera class to manage view/projection matrices with device orientation support

- Aspect ratio inverted for landscape (90/270 degrees) to prevent stretching

- View matrix rotates around camera view direction for proper orientation handling

- Created AndroidHelper class for all Android-specific functionality

- Split AndroidHelper into proper .h/.cpp separation

- Combined rotation query methods into getDeviceOrientation()

- Added NDEBUG flag to disable logging in release builds

- Updated CMakeLists.txt to compile AndroidHelper.cpp

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,6 +10,7 @@ project("myapplication")
 add_library(myapplication SHARED
         main.cpp
         AndroidOut.cpp
+        AndroidHelper.cpp
         VulkanRenderer.cpp)
 
 # Import native_app_glue for NativeActivity support
