Refactor camera touch input into a dedicated CameraController class
- Created `CameraController` class to encapsulate touch input logic (rotation, pinch-to-zoom, and panning)
- Moved touch handling logic from `VulkanRenderer` to `CameraController`
- Added configuration methods for rotation/pan sensitivity and zoom limits
- Updated `VulkanRenderer` to use `std::unique_ptr<CameraController>`
- Introduced `initCamera()` in `VulkanRenderer` to initialize camera position and controller settings
- Updated `CMakeLists.txt` to include the new source files

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -11,7 +11,9 @@ add_library(myapplication SHARED
         main.cpp
         AndroidOut.cpp
         AndroidHelper.cpp
-        VulkanRenderer.cpp)
+        VulkanRenderer.cpp
+        CameraController.cpp
+)
 
 # Import native_app_glue for NativeActivity support
 add_library(native_app_glue STATIC
